--- a/frontend/public/network_graph.html
+++ b/frontend/public/network_graph.html
@@ -88,8 +88,8 @@
                   
 
                   // parsing and collecting nodes and edges from the python
-                  nodes = new vis.DataSet([{"color": "#97c2fc", "font": {"color": "white"}, "id": "Plato", "image": "/Users/lewaldm/Documents/Llmama3Hackathon/depositphotos_157821304-stock-photo-classic-statue-socrates.jpg", "label": "Plato", "shape": "image"}, {"color": "#97c2fc", "font": {"color": "white"}, "id": "Immanuel Kant", "label": "Immanuel Kant", "shape": "dot"}, {"color": "#97c2fc", "font": {"color": "white"}, "id": "Lawyer", "label": "Lawyer", "shape": "dot"}]);
-                  edges = new vis.DataSet([{"from": "Immanuel Kant", "to": "Lawyer", "width": 20}, {"from": "Immanuel Kant", "to": "Plato", "width": 25}, {"from": "Lawyer", "to": "Plato", "width": 10}]);
+                  nodes = new vis.DataSet([{"color": "#97c2fc", "font": {"color": "white"}, "id": "Confucius", "image": "/Users/adas/codingProjects/LlamaSage/frontend/public/thumbnails/Confucius.png", "label": "Confucius", "shape": "image"}, {"color": "#97c2fc", "font": {"color": "white"}, "id": "", "label": "", "shape": "dot", "size": 10}]);
+                  edges = new vis.DataSet([{"color": "#d57eeb", "from": "Confucius", "to": "", "width": 19}]);
 
                   nodeColors = {};
                   allNodes = nodes.get({ returnType: "Object" });
